--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,8 @@ body {
 
 .card {
   background-color: rgb(255, 255, 255) ff;
-  width: 575px;
-  height: 800px;
+  width: 300px;
+  height: 500px;
 }
 
 .center {
@@ -18,6 +18,9 @@ body {
 }
 
 .numbertop {
+}
+
+.imgcontainer {
 }
 
 .suit {
