--- a/src/style.css
+++ b/src/style.css
@@ -9,12 +9,17 @@ body {
 
 .card {
   background-color: rgb(255, 255, 255) ff;
-  width: 300px;
-  height: 500px;
+  width: 250px;
+  height: 400px;
 }
 
 .center {
   margin: auto;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .numbertop {
