--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
   background-color: rgb(255, 255, 255) ff;
   width: 250px;
   height: 400px;
+  display: flex;
 }
 
 .center {
@@ -26,12 +27,17 @@ body {
 }
 
 .imgcontainer {
+  display: flex;
+  height: 80%;
 }
 
 .suit {
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .numberbottom {
-  position: absolute;
-  margin-bottom: 0px;
+  margin-right: 2px;
 }
